--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==4.0.4
-mysqlclient==2.1.1
-Django==4.0.4
 openpyxl==3.0.7
+gunicorn>=20.0,<21.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
+psycopg2>=2.0,<3.0
